sonar findings and weekday on day selection added